fixed fabs not working on mobile

--- a/packages/frontend/src/app/app.component.scss
+++ b/packages/frontend/src/app/app.component.scss
@@ -4,7 +4,7 @@ mat-toolbar {
   position: sticky;
   top: 0;
   z-index: 1000;
-  height: 56px;
+  height: 56px !important;
   @include mat.toolbar-overrides((container-background-color: var(--mat-sys-primary-container),
       container-text-color: var(--mat-sys-on-surface),
     ));
@@ -99,5 +99,16 @@ footer {
 
   .title {
     font-size: 1.5rem;
+  }
+
+  .page {
+    min-height: unset;
+    max-height: unset;
+    overflow-y: unset;
+  }
+
+  mat-toolbar {
+    min-height: 56px !important;
+    height: 56px !important;
   }
 }
